--- a/index.html
+++ b/index.html
@@ -63,45 +63,55 @@
                     </div>
                     <div class="jumbotron">
                         <h1><small></small></br>
-						<strong>Ulltrodesign</strong></h1>
-                        <p>Дизайн будущего</p>
-                        <p><a class="btn btn-primary btn-lg" role="button" href="#feat">Learn more</a> 
+						<strong>Central</strong></h1>
+                        <p>новый уровень взаимодействия с виртуальными мирами</p>
+                        <p><a class="btn btn-primary btn-lg" role="button" href="#feat">Узнать больше</a>
                     </div>
                 </div>
             </div>
         </header>
-        <section id="feat">
+        <section id="feat" class="s_back">
             <div class="container">
                 <div class="row features">
-                    <div class="col-md-4 text-center wow fadeInUp" data-wow-delay="100ms">
-                        <span class="typcn typcn-pencil x3"></span>
-                        <h4>Быстродействие</h4>
-                        <p>Наша команда старается выполнять заказы в кратчайшие сроки.</p>
+                    <div class="col-md-6 text-center wow fadeInUp" data-wow-delay="100ms">
+                        <h4>Поиск и перемещение</h4>
+                        <p>Между виртуальными мирами и играми из одного места</p>
                     </div>
-                    <div class="col-md-4 text-center wow fadeInUp" data-wow-delay="300ms">
-                        <span class="typcn typcn-camera-outline x3"></span>
-                        <h4>Наша поддержка</h4>
-                        <p>Мы готовы обсудить любые изменения в заказе, несмотря на стадию проекта</p>
+                    <div class="col-md-6 text-center wow fadeInUp" data-wow-delay="300ms">
+                        <h4>Синхронизация</h4>
+                        <p>Виртуальных активов из разных миров и VR игр</p>
                     </div>
-                    <div class="col-md-4 text-center wow fadeInUp" data-wow-delay="500ms">
-                        <span class="typcn typcn-bookmark x3"></span>
-                        <h4>Удобство</h4>
-                        <p>После оплаты заказчик можнет изменить проект самостоятельно</p>
+                    <div class="col-md-6 text-center wow fadeInUp" data-wow-delay="500ms">
+                        <h4>Взаимодействие</h4>
+                        <p>Между юзерами без ограничений возможностей</p>
+                    </div>
+                    <div class="col-md-6 text-center wow fadeInUp" data-wow-delay="700ms">
+                        <h4>Рабечее пространство</h4>
+                        <p>Создай, загрузи и монетизируй свой VR мир</p>
                     </div>
                 </div>
             </div>
         </section>        
-        <section id="history" class="story wow fadeInUp" data-wow-delay="300ms">
+        <section id="history" class="story wow fadeInUp center-block" data-wow-delay="300ms">
             <!-- change the image in style.css to the class .story .container-fluid [approximately row 141] -->
-            <div class="container-fluid">
+            <div class="container-fluid center-block">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-6 opaline">
                             <div class="row">
-                                <div class="col-md-10 col-md-offset-1">
-                                    <h1><i>В портфолио присутсвует много разнообразных работ</i></h1>
-                                    <p><i>Если Вам интересно, вы можете посмотреть на наши работы в портфолио.</i></p>
+                                <div class="col-md-10 col-md-offset-1 cool_text">
+                                    <h1><i>Скриншоты</i></h1>
+                                    <p><i>Посмотри скриншоты перед скачкой</i></p>
                                     <a class="btn btn-danger btn-lg" href="#photos">Взглянуть<i class="fa fa-arrow-circle-o-right"></i> </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6 opaline">
+                            <div class="row">
+                                <div class="col-md-10 col-md-offset-1 cool_text">
+                                    <h1><i>Скачать</i></h1>
+                                    <p><i>Скачать установщик</i></p>
+                                    <a class="btn btn-danger btn-lg" href="">Взглянуть<i class="fa fa-arrow-circle-o-right"></i> </a>
                                 </div>
                             </div>
                         </div>
@@ -116,19 +126,22 @@
                         <div class="grid-sizer"></div>
                         <div class="gutter-sizer"></div>
                         <div class="item item-width2">
-                        	<img src="https://cdn.discordapp.com/attachments/724263845710790697/777076812323749908/csgo_designer180.png" alt="" />
+                        	<img src="https://media.discordapp.net/attachments/1074000799379767437/1079865900594905198/Ajnrf.png" alt="" />
                         </div>
                         <div class="item">
-                            <img src="https://cdn.discordapp.com/attachments/724263845710790697/724968868828938260/5.jpg" alt="" />	
+                            <img src="https://media.discordapp.net/attachments/1074000799379767437/1079859134670835853/image.png?width=2520&height=1176" alt="" />
                         </div>
                         <div class="item">                            
-                              <img src="https://instagram.fhel4-1.fna.fbcdn.net/v/t51.2885-19/s320x320/136699143_1148709675563798_1123534237711931747_n.jpg?tp=1&_nc_ht=instagram.fhel4-1.fna.fbcdn.net&_nc_ohc=A2oBNrgSymAAX-86EKb&edm=ABfd0MgAAAAA&ccb=7-4&oh=5a3ca4160da8c75ff6f4532eac2e6290&oe=60A09C5F&_nc_sid=7bff83" alt="" />
+                              <img src="https://media.discordapp.net/attachments/1074000799379767437/1079859553199456346/image.png?width=2520&height=1140" alt="" />
                         </div>
                         <div class="item">
-                              <img src="https://cdn.discordapp.com/attachments/833399046499991623/833399089727143946/MetroPrewiew1.png" alt="" />
+                              <img src="https://media.discordapp.net/attachments/1074000799379767437/1079862075523862568/image.png?width=2520&height=1186" alt="" />
                         </div>
                         <div class="item">
-                              <img src="https://cdn.discordapp.com/attachments/833399046499991623/833399452722790461/Shablon_oblozhki_polosy_Sideof.png" alt="" />
+                              <img src="https://media.discordapp.net/attachments/1074000799379767437/1079870571837411458/asdfasfasdf.png" alt="" />
+                        </div>
+                        <div class="item">
+                              <img src="https://media.discordapp.net/attachments/1074000799379767437/1079859279709868102/image.png?width=2520&height=1189" alt="" />
                         </div>
                     </div>
                 </div>
@@ -138,8 +151,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8">
-                        <h3>Ultrodesign</h3>
-                        <p>©2021 Ultrodesign.</p>
+                        <h3>Central</h3>
+                        <p>©2023 Central.</p>
                     </div>
                 </div>
             </div>
