--- a/index.html
+++ b/index.html
@@ -139,10 +139,18 @@
                         <div class="item">
                               <img src="https://media.discordapp.net/attachments/1074000799379767437/1079859279709868102/image.png?width=2520&height=1189" alt="" />
                         </div>
+                        <div class="item item-width2">
+                            <h1>Смотреть MVP проекта</h1>
+                        </div>
+                        <div class="item item-width2">
+                            <video width="1280" height="720" controls>
+                              <source src="MVP.mp4" type="video/mp4">
+                            </video>
+                        </div>
                     </div>
                 </div>
             </div>
-        </section>    
+
         <footer>
             <div class="container">
                 <div class="row">
