bug fix & mobile optimization

--- a/index.html
+++ b/index.html
@@ -142,12 +142,13 @@
                         <div class="item item-width2">
                             <h1>Смотреть MVP проекта</h1>
                         </div>
+                    </div>
+
                         <div class="item item-width2">
-                            <video width="1280" height="720" controls>
+                            <video width=95% height=95% controls>
                               <source src="MVP.mp4" type="video/mp4">
                             </video>
                         </div>
-                    </div>
                 </div>
             </div>
 
