--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                                 <div class="col-md-10 col-md-offset-1 cool_text">
                                     <h1><i>Скачать</i></h1>
                                     <p><i>Скачать установщик</i></p>
-                                    <a class="btn btn-danger btn-lg" href="">Взглянуть<i class="fa fa-arrow-circle-o-right"></i> </a>
+                                    <a class="btn btn-danger btn-lg" href="">Скачать<i></i> </a>
                                 </div>
                             </div>
                         </div>
