--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                                 <div class="col-md-10 col-md-offset-1 cool_text">
                                     <h1><i>Скачать</i></h1>
                                     <p><i>Скачать установщик</i></p>
-                                    <a class="btn btn-danger btn-lg" href="">Скачать<i></i> </a>
+                                    <a class="btn btn-danger btn-lg" href="https://drive.google.com/file/d/1fpu30hY7vrSEKRotJtG8mp1_MoU6fith/view?usp=share_link">Скачать<i></i> </a>
                                 </div>
                             </div>
                         </div>
