--- a/index.html
+++ b/index.html
@@ -30,13 +30,16 @@
         };
         </script>
     </head>
-    <body class="">
+    <body style="background-color: rgb(20, 0, 49);">
       <!-- Pushy Menu -->
       <nav class="pushy pushy-left bootstrap-scrollspy">
         <ul class="list-unstyled">
             <li><a href="#home">Central</a></li>
+            <li><a href="#problems">Миссия Central</a></li>
             <li><a href="#feat">О проекте</a></li>
-            <li><a href="#photos">Скачать</a></li>
+            <li><a href="#download">Скачать</a></li>
+            <li><a href="#photos">MVP</a></li>
+
         </ul>
       </nav>
 
@@ -48,9 +51,9 @@
                 <!-- change the image in style.css to the class header .container-fluid [approximately row 50] -->
                 <div class="container">
                     <div class="row">
-                        <div class="col-md-3 col-xs-10">
+                        <div class="col-md-2 col-xs-10 ">
                             <a href="#" class="thumbnail logo round">
-                                <img src="https://cdn.discordapp.com/attachments/1074000799379767437/1079837920862687312/de2a34bd5a6979b9.png" alt="" width="100" height="100" class="img-responsive round">
+                                <img src="https://cdn.discordapp.com/attachments/1074000799379767437/1079837920862687312/de2a34bd5a6979b9.png" alt="" width="40%" height="40%" class="img-responsive left round">
                             </a>
                         </div>
                         <div class="col-md-1 col-md-offset-8 col-xs-2 text-center">
@@ -66,56 +69,62 @@
                 </div>
             </div>
         </header>
-        <section id="feat" class="s_back">
+      <section id="problems" class="s_back">
             <div class="container">
                 <div class="row features">
-                    <div class="col-md-6 text-center wow fadeInUp" data-wow-delay="100ms">
-                        <h4>Поиск и перемещение</h4>
-                        <p>Между виртуальными мирами и играми из одного места</p>
+                    <h1 class="text-left  text-left wow fadeInUp" style="color: white;  font-weight: bolder;">Миссия <a class="disabled" style="text-decoration: none; font-weight: bolder; color: #01ffc2">Central</a></h1>
+                    <div class="col-md-6 text-left wow fadeInUp" data-wow-delay="100ms">
+                        <h4 style="color: white">Отсутствие синхронизации и  сложность взаимодействия людей с различными VR играми и виртуальными мирами приводит к тому, что многие люди отказываются от использования данного вида технологий</h4>
                     </div>
-                    <div class="col-md-6 text-center wow fadeInUp" data-wow-delay="300ms">
-                        <h4>Синхронизация</h4>
-                        <p>Виртуальных активов из разных миров и VR игр</p>
-                    </div>
-                    <div class="col-md-6 text-center wow fadeInUp" data-wow-delay="500ms">
-                        <h4>Взаимодействие</h4>
-                        <p>Между юзерами без ограничений возможностей</p>
-                    </div>
-                    <div class="col-md-6 text-center wow fadeInUp" data-wow-delay="700ms">
-                        <h4>Рабечее пространство</h4>
-                        <p>Создай, загрузи и монетизируй свой VR мир</p>
-                    </div>
-                </div>
-            </div>
-        </section>        
-        <section id="history" class="story wow fadeInUp center-block" data-wow-delay="300ms">
-            <!-- change the image in style.css to the class .story .container-fluid [approximately row 141] -->
-            <div class="container-fluid center-block">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-6 opaline">
-                            <div class="row">
-                                <div class="col-md-10 col-md-offset-1 cool_text">
-                                    <h1><i>Скриншоты</i></h1>
-                                    <p><i>Посмотри скриншоты перед скачкой</i></p>
-                                    <a class="btn btn-danger btn-lg" href="#photos">Взглянуть<i class="fa fa-arrow-circle-o-right"></i> </a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6 opaline">
-                            <div class="row">
-                                <div class="col-md-10 col-md-offset-1 cool_text">
-                                    <h1><i>Скачать</i></h1>
-                                    <p><i>Скачать установщик</i></p>
-                                    <a class="btn btn-danger btn-lg" href="https://drive.google.com/file/d/1fpu30hY7vrSEKRotJtG8mp1_MoU6fith/view?usp=share_link">Скачать<i></i> </a>
-                                </div>
-                            </div>
-                        </div>
+                    <div class="col-md-6 text-left wow fadeInUp" data-wow-delay="300ms">
+                        <h4 style="color: white"><a class="disabled" style="text-decoration: none; font-weight: bold; color: #01ffc2">Наша миссия</a> - создание виртуальной среды в которой каждый может легко и удобно перемещаться между VR играми, мета-мирами и создавать свои</h4>
                     </div>
                 </div>
             </div>
         </section>
-        <section id="photos" class="gallery wow fadeInUp" data-wow-delay="300ms">
+
+        <section id="feat" class="s_back" style="position: relative; bottom: 100px">
+            <div class="container">
+                <div class="row features">
+                    <div class="col-md-6 text-center wow fadeInUp" data-wow-delay="100ms">
+                        <a class="disabled" style="text-decoration: none; font-weight: bold; color: #27305F; font-size: 500%; top: 65px; right: 280px;position: relative; line-height: 1.5px;">1</a>
+                        <h4 style="color: white; position: relative; left: 30px" class="text-left"><a class="disabled" style="text-decoration: none; font-weight: bold; color: #01ffc2">Поиск и перемещение</a> между виртуальными мирами и играми из одного места</h4>
+                    </div>
+                    <div class="col-md-6 text-center wow fadeInUp" data-wow-delay="300ms">
+                        <a class="disabled" style="text-decoration: none; font-weight: bold; color: #27305F; font-size: 500%; top: 65px; right: 280px;position: relative; line-height: 1.5px;">3</a>
+                        <h4 style="color: white; position: relative; left: 30px" class="text-left"><a class="disabled" style="text-decoration: none; font-weight: bold; color: #01ffc2">Взаимодействие</a> между юзерами<br> без ограничений возможностей</h4>
+                    </div>
+                    <div class="col-md-6 text-center wow fadeInUp" data-wow-delay="500ms">
+                        <a class="disabled" style="text-decoration: none; font-weight: bold; color: #27305F; font-size: 500%; top: 65px; right: 280px;position: relative; line-height: 1.5px;">2</a>
+                        <h4 style="color: white; position: relative; left: 30px" class="text-left"><a class="disabled" style="text-decoration: none; font-weight: bold; color: #01ffc2">Синхронизация</a> виртуальных активов из<br> разных миров и VR игр</h4>
+                    </div>
+                    <div class="col-md-6 text-center wow fadeInUp" data-wow-delay="700ms">
+                        <a class="disabled" style="text-decoration: none; font-weight: bold; color: #27305F; font-size: 500%; top: 65px; right: 280px;position: relative; line-height: 1.5px;">4</a>
+                        <h4 style="color: white; position: relative; left: 30px" class="text-left">Cоздай, загрузи и монетизируй<br> <a class="disabled" style="text-decoration: none; font-weight: bold; color: #01ffc2">свой VR мир</a></h4>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="history" class="story wow fadeInUp center-block "  style="background-color: rgb(20, 0, 49);" data-wow-delay="300ms">
+            <!-- change the image in style.css to the class .story .container-fluid [approximately row 141] -->
+            <div id="download" class="container-fluid center-block" style=" border: 5px">
+                <hr style="">
+                <div class="container center-block" style="background-color: rgb(20, 0, 49);">
+                        <div class="col-md-10 opaline center-block">
+                            <div class="row center-block">
+                                <div class="col-md-10 col-md-offset-1 cool_text ">
+                                    <h1 style="font-weight: bold">▾ Скачать ▾</h1>
+                                    <h1><a class="btn btn-danger " href="https://drive.google.com/file/d/1fpu30hY7vrSEKRotJtG8mp1_MoU6fith/view?usp=share_link" style="font-weight: bold; font-size: 30px">Windows ⊞<i class="fa "></i> </a>
+                                    <a class="btn btn-danger " href="" style="font-weight: bold; font-size: 30px">MacOS<i class="fa "></i> </a></h1>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <hr style="position: relative; bottom: 50px">
+                </div>
+            </div>
+        </section>
+        <section class="gallery wow fadeInUp" data-wow-delay="300ms">
             <div class="container">
                 <div class="row">
                     <div class="masonry image-gallery">
@@ -127,7 +136,7 @@
                         <div class="item">
                             <img src="https://media.discordapp.net/attachments/1074000799379767437/1079859134670835853/image.png?width=2520&height=1176" alt="" />
                         </div>
-                        <div class="item">                            
+                        <div class="item">
                               <img src="https://media.discordapp.net/attachments/1074000799379767437/1079859553199456346/image.png?width=2520&height=1140" alt="" />
                         </div>
                         <div class="item">
@@ -139,7 +148,7 @@
                         <div class="item">
                               <img src="https://media.discordapp.net/attachments/1074000799379767437/1079859279709868102/image.png?width=2520&height=1189" alt="" />
                         </div>
-                        <div class="item item-width2">
+                        <div  id="photos" class="item item-width2">
                             <h1>Смотреть MVP проекта</h1>
                         </div>
                     </div>
