I dont wanna push it

--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
             <li><a href="#feat">О проекте</a></li>
             <li><a href="#download">Скачать</a></li>
             <li><a href="#photos">MVP</a></li>
-
         </ul>
       </nav>
 
@@ -105,7 +104,7 @@
                 </div>
             </div>
         </section>
-        <section id="history" class="story wow fadeInUp center-block "  style="background-color: rgb(20, 0, 49);" data-wow-delay="300ms">
+        <section  class="story wow fadeInUp center-block "  style="background-color: rgb(20, 0, 49);" data-wow-delay="300ms">
             <!-- change the image in style.css to the class .story .container-fluid [approximately row 141] -->
             <div id="download" class="container-fluid center-block" style=" border: 5px">
                 <hr style="">
@@ -148,25 +147,43 @@
                         <div class="item">
                               <img src="https://media.discordapp.net/attachments/1074000799379767437/1079859279709868102/image.png?width=2520&height=1189" alt="" />
                         </div>
-                        <div  id="photos" class="item item-width2">
-                            <h1>Смотреть MVP проекта</h1>
-                        </div>
+
                     </div>
 
-                        <div class="item item-width2">
+
+                </div>
+            </div>
+        <section style="position: relative; top: 100px" id="history">
+            <div  id="photos" class="item item-width2">
+                    <h1 style="font-weight: bold; color: white">Смотреть <a class="disabled" style="text-decoration: none; font-weight: bold; color: #8742D6; text-shadow: 0 0 1px rgb(121, 43, 166),0 0 1px rgb(121, 43, 166),0 0 1px rgb(121, 43, 166),0 0 1px rgb(121, 43, 166);">MVP</a></h1>
+            </div>
+            <div class="item item-width2">
                             <video width=95% height=95% controls>
                               <source src="MVP.mp4" type="video/mp4">
                             </video>
                         </div>
-                </div>
-            </div>
+        </section>
 
-        <footer>
+        <section style="position: relative; top: 300px; left: 150px; height: 90%; width: 90%" id="team">
+            <h1 style="color: white; font-weight: bold; font-size: 60px">Команда <a class="disabled" style="text-decoration: none; font-weight: bold; color: #01ffc2">проекта</a></h1>
+            <img src="static/images/1.png">
+        </section>
+
+        <section id="contacts" style="position: relative; top: 500px; left: 150px; height: 90%; width: 90%"">
+            <h1 style="color: #01ffc2; font-weight: bold; font-size: 30px"><a class="disabled" style="text-decoration: none; font-weight: bold; color: #01ffc2">Контакты</a></h1>
+        </section>
+
+        <footer style="position: relative; top: 400px">
             <div class="container">
                 <div class="row">
                     <div class="col-md-8">
-                        <h3>Central</h3>
-                        <p>©2023 Central.</p>
+                        <h1 style="color: white; font-weight: bold; font-size: 30px;  right: 300px; position: relative; "><a class="disabled" style="text-decoration: none; font-weight: bold; font-weight: bold; color: #01ffc2">Контакты</a></h1>
+                        <a class="disabled left" style="text-decoration: none; font-weight: bold; color: white; right: 100px; position: relative; font-weight: bold"> Телефон - 89533153933</a>
+                        <a class="disabled left" style="text-decoration: none; font-weight: bold; color: white; position: relative; font-weight: bold">Почта - vfzfer@gmail.com</a>
+                        <a class="disabled left" style="text-decoration: none; font-weight: bold; color: white; position: relative; left: 200px" href="https://vk.com/ultroa"><img src="static/images/VK.png" style="width: 5%"></a>
+                        <a class="disabled left" style="text-decoration: none; font-weight: bold; color: white; position: relative; left: 210px" href="https://t.me/+jg2K2JGyYa8yNWMy"><img src="static/images/tg.png" style="width: 5%"></a>
+                        <a class="disabled left" style="text-decoration: none; font-weight: bold; color: white; position: relative; left: 220px" href="https://discord.gg/4HJCSAVG"><img src="static/images/ds.png" style="width: 5%"></a>
+                        <p style="position: relative; right: 318px; top: 40px;">©2023 Central.</p>
                     </div>
                 </div>
             </div>
