--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
             <li><a href="#home">Central</a></li>
             <li><a href="#problems">Миссия Central</a></li>
             <li><a href="#feat">О проекте</a></li>
-            <li><a href="#download">Скачать</a></li>
             <li><a href="#photos">MVP</a></li>
+            <li><a href="#download">Скачать</a></li>
         </ul>
       </nav>
 
@@ -85,41 +85,23 @@
         <section id="feat" class="s_back" style="position: relative; bottom: 100px">
             <div class="container">
                 <div class="row features">
+                    <h1 class="text-left  text-left wow fadeInUp" style="color: white;  font-weight: bolder;">Наши  <a class="disabled" style="text-decoration: none; font-weight: bolder; color: #01ffc2">возможности</a></h1>
                     <div class="col-md-6 text-center wow fadeInUp" data-wow-delay="100ms">
-                        <a class="disabled" style="text-decoration: none; font-weight: bold; color: #27305F; font-size: 500%; top: 65px; right: 280px;position: relative; line-height: 1.5px;">1</a>
-                        <h4 style="color: white; position: relative; left: 30px" class="text-left"><a class="disabled" style="text-decoration: none; font-weight: bold; color: #01ffc2">Поиск и перемещение</a> между виртуальными мирами и играми из одного места</h4>
+                        <a class="disabled" style="text-decoration: none; font-weight: bold; color: #27305F; font-size: 500%; top: 65px; right: 265px;position: relative; line-height: 1.5px;">1</a>
+                        <h4 style="color: white; position: relative; left:45px" class="text-left"><a class="disabled" style="text-decoration: none; font-weight: bold; color: #01ffc2">Поиск и перемещение</a> между виртуальными мирами и играми из одного места</h4>
                     </div>
                     <div class="col-md-6 text-center wow fadeInUp" data-wow-delay="300ms">
-                        <a class="disabled" style="text-decoration: none; font-weight: bold; color: #27305F; font-size: 500%; top: 65px; right: 280px;position: relative; line-height: 1.5px;">3</a>
-                        <h4 style="color: white; position: relative; left: 30px" class="text-left"><a class="disabled" style="text-decoration: none; font-weight: bold; color: #01ffc2">Взаимодействие</a> между юзерами<br> без ограничений возможностей</h4>
+                        <a class="disabled" style="text-decoration: none; font-weight: bold; color: #27305F; font-size: 500%; top: 65px; right: 270px;position: relative; line-height: 1.5px;">3</a>
+                        <h4 style="color: white; position: relative; left:45px" class="text-left"><a class="disabled" style="text-decoration: none; font-weight: bold; color: #01ffc2">Взаимодействие</a> между юзерами<br> без ограничений возможностей</h4>
                     </div>
                     <div class="col-md-6 text-center wow fadeInUp" data-wow-delay="500ms">
-                        <a class="disabled" style="text-decoration: none; font-weight: bold; color: #27305F; font-size: 500%; top: 65px; right: 280px;position: relative; line-height: 1.5px;">2</a>
-                        <h4 style="color: white; position: relative; left: 30px" class="text-left"><a class="disabled" style="text-decoration: none; font-weight: bold; color: #01ffc2">Синхронизация</a> виртуальных активов из<br> разных миров и VR игр</h4>
+                        <a class="disabled" style="text-decoration: none; font-weight: bold; color: #27305F; font-size: 500%; top: 65px; right: 270px;position: relative; line-height: 1.5px;">2</a>
+                        <h4 style="color: white; position: relative; left:45px" class="text-left"><a class="disabled" style="text-decoration: none; font-weight: bold; color: #01ffc2">Синхронизация</a> виртуальных активов из<br> разных миров и VR игр</h4>
                     </div>
                     <div class="col-md-6 text-center wow fadeInUp" data-wow-delay="700ms">
-                        <a class="disabled" style="text-decoration: none; font-weight: bold; color: #27305F; font-size: 500%; top: 65px; right: 280px;position: relative; line-height: 1.5px;">4</a>
-                        <h4 style="color: white; position: relative; left: 30px" class="text-left">Cоздай, загрузи и монетизируй<br> <a class="disabled" style="text-decoration: none; font-weight: bold; color: #01ffc2">свой VR мир</a></h4>
+                        <a class="disabled" style="text-decoration: none; font-weight: bold; color: #27305F; font-size: 500%; top: 65px; right: 270px;position: relative; line-height: 1.5px;">4</a>
+                        <h4 style="color: white; position: relative; left:45px" class="text-left">Cоздай, загрузи и монетизируй<br> <a class="disabled" style="text-decoration: none; font-weight: bold; color: #01ffc2">свой VR мир</a></h4>
                     </div>
-                </div>
-            </div>
-        </section>
-        <section  class="story wow fadeInUp center-block "  style="background-color: rgb(20, 0, 49);" data-wow-delay="300ms">
-            <!-- change the image in style.css to the class .story .container-fluid [approximately row 141] -->
-            <div id="download" class="container-fluid center-block" style=" border: 5px">
-                <hr style="">
-                <div class="container center-block" style="background-color: rgb(20, 0, 49);">
-                        <div class="col-md-10 opaline center-block">
-                            <div class="row center-block">
-                                <div class="col-md-10 col-md-offset-1 cool_text ">
-                                    <h1 style="font-weight: bold">▾ Скачать ▾</h1>
-                                    <h1><a class="btn btn-danger " href="https://drive.google.com/file/d/1fpu30hY7vrSEKRotJtG8mp1_MoU6fith/view?usp=share_link" style="font-weight: bold; font-size: 30px">Windows ⊞<i class="fa "></i> </a>
-                                    <a class="btn btn-danger " href="" style="font-weight: bold; font-size: 30px">MacOS<i class="fa "></i> </a></h1>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <hr style="position: relative; bottom: 50px">
                 </div>
             </div>
         </section>
@@ -153,7 +135,7 @@
 
                 </div>
             </div>
-        <section style="position: relative; top: 100px" id="history">
+        <section style="position: relative;" id="history">
             <div  id="photos" class="item item-width2">
                     <h1 style="font-weight: bold; color: white">Смотреть <a class="disabled" style="text-decoration: none; font-weight: bold; color: #8742D6; text-shadow: 0 0 1px rgb(121, 43, 166),0 0 1px rgb(121, 43, 166),0 0 1px rgb(121, 43, 166),0 0 1px rgb(121, 43, 166);">MVP</a></h1>
             </div>
@@ -163,17 +145,31 @@
                             </video>
                         </div>
         </section>
+        <section  class="story wow fadeInUp center-block "  style="background-color: rgb(20, 0, 49); position: relative; top: 150px;" data-wow-delay="300ms">
+            <div id="download" class="container-fluid center-block" style=" border: 5px">
+                <div class="container center-block" style="background-color: rgb(20, 0, 49);">
+                        <div class="col-md-10 opaline center-block">
+                            <div class="row center-block">
+                                <div class="col-md-10 col-md-offset-1 cool_text ">
+                                    <h1 style="font-weight: bold">▾ Скачать ▾</h1>
+                                    <h1><a class="btn  s_back" href="static/Central_Installer_v1.exe" style="font-weight: bold; background: #8742D6; font-size: 30px; color: white">Windows ⊞<i class="fa "></i> </a>
+                                    <a class="btn " href="" style="font-weight: bold; background: #8742D6; font-size: 30px; color: white">MacOS<i class="fa "></i> </a></h1>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
-        <section style="position: relative; top: 300px; left: 150px; height: 90%; width: 90%" id="team">
+
+        <section style="position: relative; top: 200px; left: 150px; height: 90%; width: 90%" id="team">
             <h1 style="color: white; font-weight: bold; font-size: 60px">Команда <a class="disabled" style="text-decoration: none; font-weight: bold; color: #01ffc2">проекта</a></h1>
-            <img src="static/images/1.png">
+            <img style="height: 70%; width: 70%" src="static/images/1.png">
         </section>
 
-        <section id="contacts" style="position: relative; top: 500px; left: 150px; height: 90%; width: 90%"">
-            <h1 style="color: #01ffc2; font-weight: bold; font-size: 30px"><a class="disabled" style="text-decoration: none; font-weight: bold; color: #01ffc2">Контакты</a></h1>
-        </section>
 
-        <footer style="position: relative; top: 400px">
+        <footer style="position: relative; top: 200px">
             <div class="container">
                 <div class="row">
                     <div class="col-md-8">
