--- a/index.html
+++ b/index.html
@@ -32,13 +32,16 @@
     </head>
     <body style="background-color: rgb(20, 0, 49);">
       <!-- Pushy Menu -->
-      <nav class="pushy pushy-left bootstrap-scrollspy">
-        <ul class="list-unstyled">
-            <li><a href="#home">Central</a></li>
-            <li><a href="#problems">Миссия Central</a></li>
-            <li><a href="#feat">О проекте</a></li>
-            <li><a href="#photos">MVP</a></li>
-            <li><a href="#download">Скачать</a></li>
+      <nav >
+        <div class="logo" style="position: relative; left: 180px; top: 5px">
+            <img src="https://cdn.discordapp.com/attachments/1074000799379767437/1079837920862687312/de2a34bd5a6979b9.png" alt="" class="img-responsive left round">
+        </div>
+        <ul class="list-item list-unstyled " style="position: relative; right: 870px;">
+          <li><a href="#home" style="font-weight: bold">Central</a></li>
+            <li><a href="#problems" style="font-weight: bold">Миссия Central</a></li>
+            <li><a href="#feat" style="font-weight: bold">О проекте</a></li>
+            <li><a href="#photos" style="font-weight: bold">MVP</a></li>
+            <li><a href="#download" style="font-weight: bold">Скачать</a></li>
         </ul>
       </nav>
 
@@ -48,17 +51,7 @@
         <header id="home">
             <div class="container-fluid">
                 <!-- change the image in style.css to the class header .container-fluid [approximately row 50] -->
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-2 col-xs-10 ">
-                            <a href="#" class="thumbnail logo round">
-                                <img src="https://cdn.discordapp.com/attachments/1074000799379767437/1079837920862687312/de2a34bd5a6979b9.png" alt="" width="40%" height="40%" class="img-responsive left round">
-                            </a>
-                        </div>
-                        <div class="col-md-1 col-md-offset-8 col-xs-2 text-center">
-                          <div class="menu-btn"><span class="hamburger">&#9776;</span></div>
-                        </div>
-                    </div>
+
                     <div class="jumbotron">
                         <h1><small></small></br>
 						<strong>Central</strong></h1>
