--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             <li><a href="#feat" style="font-weight: bold">О проекте</a></li>
             <li><a href="#photos" style="font-weight: bold">MVP</a></li>
             <li><a href="#download" style="font-weight: bold">Скачать</a></li>
+            <li><a href="links.html" style="font-weight: bold">Сайты</a></li>
         </ul>
       </nav>
 
@@ -145,7 +146,7 @@
                             <div class="row center-block">
                                 <div class="col-md-10 col-md-offset-1 cool_text ">
                                     <h1 style="font-weight: bold">▾ Скачать ▾</h1>
-                                    <h1><a class="btn  s_back" href="static/Central_Installer_v1.exe" style="font-weight: bold; background: #8742D6; font-size: 30px; color: white">Windows ⊞<i class="fa "></i> </a>
+                                    <h1><a class="btn  s_back" href="" style="font-weight: bold; background: #8742D6; font-size: 30px; color: white">Windows ⊞<i class="fa "></i> </a>
                                     <a class="btn " href="" style="font-weight: bold; background: #8742D6; font-size: 30px; color: white">MacOS<i class="fa "></i> </a></h1>
                                 </div>
                             </div>
