--- a/index.html
+++ b/index.html
@@ -36,12 +36,13 @@
         <div class="logo" style="position: relative; left: 180px; top: 5px">
             <img src="https://cdn.discordapp.com/attachments/1074000799379767437/1079837920862687312/de2a34bd5a6979b9.png" alt="" class="img-responsive left round">
         </div>
-        <ul class="list-item list-unstyled " style="position: relative; right: 870px;">
+        <ul class="list-item list-unstyled " style="position: relative;">
           <li><a href="#home" style="font-weight: bold">Central</a></li>
             <li><a href="#problems" style="font-weight: bold">Миссия Central</a></li>
             <li><a href="#feat" style="font-weight: bold">О проекте</a></li>
             <li><a href="#photos" style="font-weight: bold">MVP</a></li>
             <li><a href="#download" style="font-weight: bold">Скачать</a></li>
+            <li><a href="links.html" style="font-weight: bold">Сайты</a></li>
         </ul>
       </nav>
 
